--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-        <div class="postcard">Hello</div>
+		<div class="postcard">
+			<div class="postcard-header">
+				<h1>My Postcard</h1>
+				<img
+					src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png"
+				/>
+			</div>
+			<div class="postcard-body">
+				<div class="body-left">I will be on the left</div>
+				<div class="body-right">I will be on the right</div>
+			</div>
+			<div class="postcard-footer"></div>
+		</div>
 	</body>
 </html>
