making some progress

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
+		<!-- comienza a añadir nuevas etiquetas o tags aquí -->
 		<div class="postcard">
 			<div class="postcard-header">
-				<h1>My Postcard</h1>
+				<h1>My postcard</h1>
 				<img
 					src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png"
 				/>
 			</div>
 			<div class="postcard-body">
-				<div class="body-left">I will be on the left</div>
-				<div class="body-right">I will be on the right</div>
+				<div class="body-left"></div>
+				<div class="body-right"></div>
 			</div>
-			<div class="postcard-footer"></div>
+			<div class="postcard-footer">s</div>
 		</div>
 	</body>
 </html>
