--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<p>look how awesome! this is a postcard that i created using HTML and CSS3 during my 4geeks Academy course!</p>
 					<p>This is so cool, can't wait to start doing more stuff!</p>
 				</div>
-				<div class="body-right"><input type="Some Name" /><input type="Some Email" /><input type="Some comment" /></div>
+				<div class="body-right"><input type="text" placeholder= "Some Name" /><input type="text" placeholder= "Some Email" /><input type="text" placeholder= "Some Coment" /></div>
 			</div>
 			<div class="postcard-footer">
 				<div class="postcard-footer">
