--- a/.learn/resets/13-check-your-code/index.html
+++ b/.learn/resets/13-check-your-code/index.html
@@ -25,12 +25,12 @@
 					<p>
 						<input type="text" name="full name" placeholder="Some Name" />
 						<input type="eamil" name="email" placeholder="Some email" />
-						<input type="text" maxlength="500" name="comment" placeholder="Some comment" />
+						<input type="textarea" name="comment" placeholder="Some comment" />
 					</p>
 				</div>
 			</div>
 			<div class="postcard-footer">
-				<button><strong>Send My Postcard</strong></button>
+				<button>Send My Postcard</button>
 			</div>
 		</div>
 	</body>
