--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<p>This is so cool, can't wait to start doing more stuff!</p>
 				</div>
 				<div class="body-right">
-					<input type="text" value="Some Name" />
-					<input type="email" value="Some Email" />
-					<input type="text" value="Some Comment" />
+					<input type="text" placeholder="Some Name" />
+					<input type="email" placeholder="Some Email" />
+					<input type="text" placeholder="Some Comment" />
 				</div>
 			</div>
 			<div class="postcard-footer">
