Fix index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 	</head>
 	<body>
 		<div class="postcard">
-			Hello
 			<div class="postcard-header">
 				<h1>My Postcard</h1>
 				<img
@@ -18,13 +17,13 @@
 			</div>
 			<div class="postcard-body">
 				<div class="body-left">
-					I am the left side
-					<p></p>
-					<p></p>
+					<p>Look how awesome! This is a postcard that I created using HTML5 and CSS3 during my 4Geeks Academy Course!</p>
+					<p>This is so cool, can't wait to start doing more stuff!</p>
 				</div>
 				<div class="body-right">
-					I am the right side
-					<input type="text" />
+					<input type="text" placeholder="Some Name">
+					<input type="text" placeholder="Some Email">
+					<input type="text" placeholder="Some Comment">
 				</div>
 			</div>
 			<div class="postcard-footer">
