--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<p class="child2">This is so so cool, I´m exciting to begin more stuff!!</p>
 				</div>
 				<div class="body-right">
-					<input type="text" placeholder="Some Name" />
-					<input type="text" placeholder="Some Email" />
-					<input type="text" placeholder="Some Comment" />
+					<input type="text" placeholder="Some Name" /><br /><br />
+					<input type="text" placeholder="Some Email" /><br /><br />
+					<input type="text" placeholder="Some Comment" /><br /><br />
 				</div>
 			</div>
 			<div class="postcard-footer">
