--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 				src=https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png>
 			</div>
 			<div class="postcard-body">
-                <div class="body-left">Soy el lado izquierdo
-                    <div class="body-right">Soy el lado derecho
-            </div>
+				<div class="body-left">
+					<p>Estoy haciendo una postal con HTML y CSS gracias al curso de 4geeks Academy.</p>
+					<p>Poco a poco voy aprendiendo a hacer mas cosas por mi cuenta!</p>
+				</div>
+				<div class="body-right">Joel Dorta Perez Tenerife joeldorta19@gmail.com</div>
+			</div>
 			<div class="postcard-footer">
-                <button>Send my postcard</button>
+				<button>Send my postcard</button>
+			</div>
 		</div>
-                </div>
 	</body>
 </html>
