--- a/.learn/resets/12.1-body-content/index.html
+++ b/.learn/resets/12.1-body-content/index.html
@@ -5,9 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 		<link rel="stylesheet" href="styles.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Boogaloo&family=Handlee&display=swap" rel="stylesheet" />
 	</head>
 	<body>
 		<!-- comienza a añadir nuevas etiquetas o tags aquí -->
@@ -23,27 +20,18 @@
 
 			<div class="postcard-body">
 				<div class="body-left">
-					<p>Look how awesome! This is a postcard that I created using HTML5 and CSS3 during my 4Geeks Academy Course!</p>
+					<p>Look how awesaome! This is a postcard that I created using HTML5 and CSS3 during my 4Geeks Academy Course!</p>
 					<p>This is so cool, can't wait to start doing more stuff</p>
 				</div>
 
 				<div class="body-right">
 					<p>
-						<input type="text" placeholder=" Some Name" />
-					</p>
-
-					<p>
-						<input type="text" placeholder=" Some Email" />
-					</p>
-					<p>
-						<input type="text" placeholder=" Some comment" />
+						<input type="text" name="asunto" />
 					</p>
 				</div>
 			</div>
 
-			<div class="postcard-footer">
-				<button>Send My Postcard</button>
-			</div>
+			<div class="postcard-footer"></div>
 		</div>
 	</body>
 </html>
